# web-auth

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.local  hauth.cabal
app/: EmailWorkerMain.hs  Main.hs
frontend/: README.md
frontend/src/: index.css  router.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  UsersPage.tsx  VerifyEmailPage.tsx
frontend/src/state/: session.ts
src/: Lib.hs  MyLib.hs  tmp_Lib_old_code.hs  x_Lib-v01.bak  x_Lib-v02.bak  x_Lib-v03.bak
src/Adapter/HTTP/: Common.hs  Main.hs  Utils.hs
src/Adapter/HTTP/API/: Auth.hs  Common.hs  Main.hs  Utils.hs
src/Adapter/HTTP/API/Client/: Auth.hs  Common.hs
src/Adapter/HTTP/API/Server/: Auth.hs  Common.hs  Main.hs  Utils.hs
src/Adapter/HTTP/API/Types/: AesonHelper.hs  Auth.hs
src/Adapter/HTTP/Web/: Auth.hs  Common.hs  Main.hs  Utils.hs  tmp-Utils_v01.bak
src/Adapter/InMemory/: Auth.hs  x_Auth-v01.bak
src/Adapter/PostgreSQL/: Auth.hs
src/Adapter/RabbitMQ/: Auth.hs  Common.hs  EmailWorker.hs
src/Adapter/Redis/: Auth.hs
src/Domain/: Auth.hs  Validation.hs  x_Auth-v01.bak
test/: Main.hs
