cabal-version:      3.0
name:               hauth
version:            0.1.0.0
synopsis:           Web user authentication project.
-- description:
license:            MIT
license-file:       LICENSE
author:             Antonio Hernandez
maintainer:         ajuggler@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common lang
    default-language: Haskell2010
    default-extensions:
        ConstraintKinds
        FlexibleContexts
        GeneralizedNewtypeDeriving
        QuasiQuotes
        NoImplicitPrelude
        OverloadedStrings
        TemplateHaskell

common warnings
    ghc-options: -Wall

library
    import:           lang
--    import:           warnings
    exposed-modules:
        Adapter.HTTP.API.Auth
        Adapter.HTTP.Main
        Adapter.HTTP.Common
        Adapter.HTTP.Utils
        Adapter.InMemory.Auth
        Adapter.PostgreSQL.Auth
        Adapter.RabbitMQ.Auth
        Adapter.RabbitMQ.Common
        Adapter.Redis.Auth
        Domain.Auth
        Domain.Validation
        Lib
    -- other-modules:
    -- other-extensions:
    build-depends:
        aeson,
        amqp,
        base ^>=4.18.3.0,
        blaze-builder,
        classy-prelude,
        containers,
        cookie,
        data-has,
        digestive-functors,
--        digestive-functors-aeson,
        exceptions,
        hedis,
        http-types,
        katip,
        lens,
        lens-aeson,
        lifted-base,
        mtl,
        pcre-heavy,
        postgresql-simple,
        postgresql-migration,
        resource-pool,
        safe,
        safe-exceptions,
        scotty,
        string-random,
        template-haskell,
        text,
        time,
        time-lens,
        vector,
        wai,
        wai-extra

        

    hs-source-dirs:   src
    default-language: Haskell2010

executable hauth
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        hauth

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hauth-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hauth
