cabal-version:      3.0
name:               hauth
version:            0.1.0.0
synopsis:           Web user authentication project.
license:            MIT
license-file:       LICENSE
author:             Antonio Hernandez
maintainer:         info@lambdacrafters.io
copyright:          LambdaCrafters
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
    default-language: Haskell2010
    default-extensions:
        ConstraintKinds
        FlexibleContexts
        GeneralizedNewtypeDeriving
        QuasiQuotes
        NoImplicitPrelude
        OverloadedStrings
        TemplateHaskell

common warnings
    ghc-options: -Wall

library
    import: lang
    import: warnings
    exposed-modules:
        Adapter.HTTP.API.Client.Auth
        Adapter.HTTP.API.Client.Common
        Adapter.HTTP.API.Server.Auth
        Adapter.HTTP.API.Server.Common
        Adapter.HTTP.API.Server.Main
        Adapter.HTTP.API.Server.Utils
        Adapter.HTTP.API.Types.AesonHelper
        Adapter.HTTP.API.Types.Auth
        Adapter.HTTP.Main
        Adapter.HTTP.Common
        Adapter.HTTP.Web.Auth
        Adapter.HTTP.Web.Common
        Adapter.HTTP.Web.Main
        Adapter.HTTP.Web.Utils
        Adapter.InMemory.Auth
        Adapter.PostgreSQL.Auth
        Adapter.RabbitMQ.Auth
        Adapter.RabbitMQ.Common
        Adapter.RabbitMQ.EmailWorker
        Adapter.Redis.Auth
        Domain.Auth
        Domain.Validation
        Lib
    build-depends:
        aeson                    ^>=2.2.3.0,
        amqp                     ^>=0.24.0,
        base                     ^>=4.18.3.0,
        blaze-builder            ^>=0.4.4.1,
        blaze-html               ^>=0.9.2.0,
        bytestring               ^>=0.11.5.4,
        classy-prelude           ^>=1.5.0.3,
        containers               ^>=0.6.7,
        cookie                   ^>=0.5.1,
        data-has                 ^>=0.4.0.0,
        digestive-functors       ^>=0.8.4.2,
        digestive-functors-blaze ^>=0.6.2.0,
        exceptions               ^>=0.10.7,
        hedis                    ^>=0.15.2,
        http-client              ^>=0.7.19,
        http-client-tls          ^>=0.3.6.4,
        http-types               ^>=0.12.4,
        katip                    ^>=0.8.8.4,
        lens                     ^>=5.3.6,
        lens-aeson               ^>=1.2.3,
        lifted-base              ^>=0.2.3.12,
        mtl                      ^>=2.3.1,
        pcre-heavy               ^>=1.0.0.4,
        postgresql-migration     ^>=0.2.1.8,
        postgresql-simple        ^>=0.7.0.1,
        resource-pool            ^>=0.5.0.0,
        safe                     ^>=0.3.21,
        safe-exceptions          ^>=0.1.7.4,
        scotty                   ^>=0.30,
        string-random            ^>=0.1.4.5,
        template-haskell         ^>=2.20.0.0,
        text                     ^>=2.0.2,
        smtp-mail                ^>=0.5.0.0,
        mime-mail                ^>=0.5.1,
        time                     ^>=1.12.2,
        time-lens                ^>=0.4.0.2,
        vector                   ^>=0.13.2.0,
        wai                      ^>=3.2.4,
        wai-cors                 ^>=0.2.7,
        wai-middleware-static    ^>=0.9.4,
        wai-extra                ^>=3.1.18,
        warp                     ^>=3.4.12
    hs-source-dirs: src
    default-language: Haskell2010

executable hauth
    import: warnings
    main-is: Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hauth
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts

executable hauth-email-worker
    import: warnings
    import: lang
    main-is: EmailWorkerMain.hs
    build-depends:
        base           ^>=4.18.3.0,
        classy-prelude ^>=1.5.0.3,
        exceptions     ^>=0.10.7,
        hauth,
        katip          ^>=0.8.8.4
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts

test-suite hauth-test
    import: warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hauth
